# forge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LANGUAGE.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  ROADMAP_KERNEL.md  STACK_STATE.md  build.sh  dune-project  forge.opam  q1.ml  q1_with_exc.ml  q2.mli  q2_clean.mli  rebuild.sh  regen_parser.sh  run_all_demos.sh  run_demos.sh  run_demos_range.sh  test_gcc.sh  test_isort.fg  test_one.sh  test_runtime.sh
apps/: build_all.sh
apps/snake/: game.c  (+2 more)
benchmarks/: forge_ml_inventory.md  forge_ml_inventory.py  forgebench.py
demos/: 01_divide.c  01_divide.fg  02_bad_divide.fg  03_overflow.c  03_overflow.fg  04_minmax.c  04_minmax.fg  05_abs.c  05_abs.fg  06_gcd.c  06_gcd.fg  07_saturating.c  07_saturating.fg  08_midpoint.c  08_midpoint.fg  09_packing.c  09_packing.fg  1000_grand_finale.c  1000_grand_finale.fg  1001_nested_if_swap.c  1001_nested_if_swap.fg  1002_verified_sort_sorted.c  1002_verified_sort_sorted.fg  1003_siftdown_natural.c  1003_siftdown_natural.fg  1004_bubble_sort_proven.c  1004_bubble_sort_proven.fg  1005_stdlib_sort_search.c  1005_stdlib_sort_search.fg  1006_verified_ipv4_parser.c  1006_verified_ipv4_parser.fg  1007_stdlib_compress.c  1007_stdlib_compress.fg  1008_raw_pointers.c  1008_raw_pointers.fg  1009_bitfields.c  1009_bitfields.fg  100_showcase.c  100_showcase.fg  1010_kernel_module.c  (+2340 more)
docs/: CLOSURES_DESIGN.md  COMPILER_INTERNALS.md  MANUAL.md  Z3_TROUBLESHOOTING.md
scripts/: forge_pipeline.py  regen_parser.sh  regress_gpu_demos.sh
test/: run_all.sh  test_pipeline.py
(+264 files in other folders)
